--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 # Project Specific
 uv.lock
 
+# Node.js
+node_modules/
+.next/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
